# phylo_autoencode

./: .gitignore  PhyloAEModel.py  PhyloAutoencoder.py  README.md  __init__.py  basic_requirements.txt  cmd_phylo_recon_error.py  phyencode_env.yml  pyproject.toml  setup.py
example/phyddle_sim_data/: phyddle_config.py
phyloencode/: DataProcessors.py  PhyLoss.py  PhyloAEModel.py  PhyloAutoencoder.py  __init__.py  cmd_encode.py  utils.py
phyloencode/cli/: cmd_decode.py  cmd_encode.py  cmd_generate.py  cmd_predict.py  cmd_train.py
sandbox/: DataProcessors.py  PhyloAEModel.py  cblv_to_nwk.py  check_encoded_tree.py  deployed_tester.py  test_DataProcessors.py  tester.py  torchtest.py  train_tester.py  tree_pca.py
scripts/: cblv_to_nwk.py  hdf5_to_cblv.py  ph_config.py  plot_encoding.py  profile_train.py  qqplotter.py  train.py  tree_path.py  tree_path_gif_maker.py
src/phyloencode/: DataProcessors.py  PhyLoss.py  PhyloAEModel.py  PhyloAutoencoder.py  ResNet.py  __init__.py  test.cblv  utils.py
src/phyloencode/cli/: cmd_decode.py  cmd_encode.py  cmd_generate.py  cmd_phylo_recon_error.py  cmd_train.py
testing/MVN_experiment/: create_MVN_dataset.py
