[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "phyloencode"
version = "0.1"
description = "A Python package for phylogenetic data encoding. Designed to work with Phyddle -format output."
readme = "README.md"
authors = [{name = "Ammon Thompson", email = "ammonthompson@gmail.com"}]
license = {text = "MIT"}  # Replace with your license
keywords = ["autoencoder", "bioinformatics", "phylogenetics", "machine learning", "deep learning"]
dependencies = [
    "torch",
    "h5py",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "pandas"
]
requires-python = ">=3.7"

[project.scripts]
phyencode = "phyloencode.cli.cmd_encode:main"
# aetrain   = "phyloencode.cli.cmd_train:main"

[tool.hatch.build]
exclude = ["sandbox/**", "phyloencode.egg-info/**", "__pycache__/**", "*.pyc", "*.pyo", "*.log", ".git/**"]

