[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "phyloencode"
version = "0.1"
description = "A Python package for phylogenetic data encoding. Designed to work with Phyddle format step output."
readme = "README.md"
authors = [{name = "Ammon Thompson", email = "ammonthompson@gmail.com"}]
license = {text = "MIT"}
keywords = ["autoencoder", "bioinformatics", "phylogenetics", "machine learning", "deep learning"]
dependencies = [
    "h5py >=3.12.1, <4.0",
    "matplotlib >=3.10.0, <4.0",
    "numpy >=2.2.2, <3.0",
    "pandas >=2.2.3, <3.0",
    "phyddle >=0.3.0, <1.0",
    "scikit-learn >=1.6.1, <2.0",
    "torch >=2.6.0, <3.0"
]
requires-python = ">=3.7"

[project.scripts]
phyencode = "phyloencode.cli.cmd_encode:main"
phydecode = "phyloencode.cli.cmd_decode:main"
phytrain  = "phyloencode.cli.cmd_train:main"
phygen    = "phyloencode.cli.cmd_generate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build]
exclude = ["sandbox/**", "phyloencode.egg-info/**", "__pycache__/**", "*.pyc", "*.pyo", "*.log", ".git/**", "tests/**", "dev/**", ".vscode/**"]

